--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "16.9.0",
-    "react-native": "0.61.5"
+    "react-native": "0.61.5",
+    "react-native-camera": "^3.19.2",
+    "react-native-text-detector": "^0.0.6"
   },
   "devDependencies": {
     "@babel/core": "7.8.7",
