--- a/package.json
+++ b/package.json
@@ -10,20 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.9.0",
-    "react-native": "0.61.5",
-    "react-native-camera": "^3.19.2",
-    "react-native-text-detector": "^0.0.6"
+    "react": "16.11.0",
+    "react-native": "0.62.1"
   },
   "devDependencies": {
-    "@babel/core": "7.8.7",
-    "@babel/runtime": "7.8.7",
-    "@react-native-community/eslint-config": "0.0.5",
-    "babel-jest": "24.9.0",
-    "eslint": "6.8.0",
-    "jest": "24.9.0",
-    "metro-react-native-babel-preset": "0.56.4",
-    "react-test-renderer": "16.9.0"
+    "@babel/core": "^7.9.0",
+    "@babel/runtime": "^7.9.2",
+    "@react-native-community/eslint-config": "^1.0.0",
+    "babel-jest": "^25.3.0",
+    "eslint": "^6.8.0",
+    "jest": "^25.3.0",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "react-test-renderer": "16.11.0"
   },
   "jest": {
     "preset": "react-native"
