--- a/ios/Podfile
+++ b/ios/Podfile
@@ -54,6 +54,8 @@ target 'BizWallet' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNCMaskedView', :path => '../node_modules/@react-native-community/masked-view'
+
   target 'BizWalletTests' do
     inherit! :complete
     # Pods for testing
