--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.9",
+    "mime": "^2.4.4",
     "react": "16.11.0",
     "react-native": "0.62.1",
     "react-native-camera": "^3.22.0",
