--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.9",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.1.6",
+    "@react-navigation/stack": "^5.2.13",
     "mime": "^2.4.4",
     "react": "16.11.0",
     "react-native": "0.62.1",
@@ -18,7 +20,7 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.5.0",
+    "react-native-screens": "^2.6.0",
     "react-native-text-detector": "^0.0.6"
   },
   "devDependencies": {
