--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.6.0",
-    "react-native-text-detector": "^0.0.6"
+    "react-native-text-detector": "^0.0.6",
+    "react-navigation": "^4.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
